--- a/build.xml
+++ b/build.xml
@@ -166,10 +166,10 @@
 			<delete includeEmptyDirs="true" quiet="true">
 				<fileset dir="${release}/lib" includes="**/*" />
 			</delete>
-			<!--mkdir dir="${release}/lib" />
+			<mkdir dir="${release}/lib" />
 			<copy todir="${release}/lib" overwrite="true">
 				<fileset dir="${lib}" />
-			</copy-->
+			</copy>
 			<exec executable="grep">
 				<redirector output="ivypack.xml" />
 				<arg value="&lt;dependency .*org=&quot;prom&quot; " />
